--- a/style.css
+++ b/style.css
@@ -5,8 +5,33 @@
 	--neutral-gray: hsl(0, 0%, 50%);
 }
 
+* {
+	margin: 0;
+}
+
 body {
 	font-family: 'Open Sans', sans-serif;
+}
+
+.container {
+	display: flex;
+	height: 100vh;
+}
+
+#hero {
+	background-color: rgb(3, 28, 113);
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
+	flex: 1;
+}
+
+#main-page {
+	flex: 1;
+	margin: 4em;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
 }
 
 .attribution {
