--- a/style.css
+++ b/style.css
@@ -57,8 +57,8 @@ header {
 }
 
 ion-icon {
-	margin: 0 1em;
-	font-size: 32px;
+	margin: 0 0.5em;
+	font-size: 28px;
 	color: var(--dark-blue);
 }
 
@@ -109,5 +109,6 @@ button {
 #privacy-link {
 	color: var(--dark-blue);
 	display: flex;
+	font-size: 12pt;
 	justify-content: flex-end;
 }
