--- a/style.css
+++ b/style.css
@@ -19,11 +19,12 @@ body {
 }
 
 #hero {
-	background-color: rgb(3, 28, 113);
+	background-image: linear-gradient(45deg, rgb(93, 98, 168), rgb(3, 28, 113));
 	display: flex;
 	flex-direction: column;
 	justify-content: space-around;
 	flex: 1;
+	padding: 3em;
 }
 
 #main-page {
