--- a/style.css
+++ b/style.css
@@ -125,7 +125,8 @@ button {
 	}
 
 	#hero {
-		background-image: url('./images/bg-intro.svg');
+		background: url('./images/bg-intro.svg');
+		background-size: cover;
 		background-repeat: no-repeat;
 	}
 
