--- a/style.css
+++ b/style.css
@@ -83,6 +83,12 @@ p {
 	color: var(--neutral-gray);
 }
 
+#signup-section {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-evenly;
+}
+
 #signup {
 	display: flex;
 	flex-direction: row;
@@ -149,5 +155,22 @@ button {
 
 	#main-page {
 		margin: 0 3em;
+	}
+
+	#signup {
+		flex-direction: column;
+	}
+
+	#signup-email {
+		border: 1px solid lightgray;
+		box-shadow: none;
+		width: 100%;
+		height: 36px;
+		font-size: 32px;
+		margin: 1em 0;
+	}
+
+	#signup-button {
+		height: 40px;
 	}
 }
