--- a/style.css
+++ b/style.css
@@ -15,90 +15,84 @@ body {
 
 .container {
 	display: flex;
-	height: 100vh;
-}
-
-#hero {
-	background-image: linear-gradient(45deg, rgb(93, 98, 168), rgb(3, 28, 113));
-	display: flex;
 	flex-direction: column;
 	justify-content: space-around;
-	flex: 1;
-	padding: 3em;
+	background: url('./images/bg-intro.svg');
+	background-size: contain;
+	background-repeat: no-repeat;
 }
 
-#mobile-header {
-	display: none;
-}
-
-#main-page {
-	flex: 1;
-	margin: 4em;
+.hero {
 	display: flex;
 	flex-direction: column;
+	justify-content: center;
+	padding: 0 2em;
+}
+
+.menu {
+	display: flex;
 	justify-content: space-between;
 }
 
-main {
+.menu ul {
 	display: flex;
-	flex-direction: column;
-	justify-content: space-evenly;
-	height: 50vh;
+	justify-content: space-between;
+	align-items: center;
 }
 
-header {
-	display: flex;
-	flex-direction: row;
-	justify-content: space-between;
+.logo {
+	margin: 1em;
+	filter: invert(1) hue-rotate(180deg) brightness(3);
 }
 
 ion-icon {
-	margin: 0 0.5em;
-	font-size: 28px;
-	color: var(--dark-blue);
+	color: white;
+	font-size: 20px;
+	margin: 0 10px;
 }
 
-.header-elem {
+.main-page {
+	padding: 0 2em;
 	display: flex;
-	flex-direction: row;
-	justify-content: space-between;
+	flex-direction: column;
 }
 
-h1,
-h2 {
+.main-page > * {
+	margin-bottom: 1em;
+}
+
+.main-page h1,
+.main-page h3 {
 	font-family: 'Raleway', sans-serif;
 	color: var(--dark-blue);
 }
 
-p {
+.main-page p {
+	font-size: 14px;
 	color: var(--neutral-gray);
 }
 
-#signup-section {
+.signup-section {
 	display: flex;
 	flex-direction: column;
 	justify-content: space-evenly;
 }
 
-#signup {
-	display: flex;
-	flex-direction: row;
-	justify-content: space-between;
+.signup-section input {
+	border: 1px solid lightgray;
+	box-shadow: none;
+	width: 100%;
+	height: 36px;
+	font-size: 32px;
+	margin: 16px auto;
 }
 
-input {
-	vertical-align: middle;
-	font-size: 40px;
-	height: 70px;
-	width: 60%;
-}
-
-button {
+.signup-section input[type='submit'] {
 	background-color: var(--accent-green);
 	color: white;
 	font-size: 18px;
-	height: 72px;
-	width: 33%;
+	height: 48px;
+	width: 40%;
 	vertical-align: middle;
 }
 
@@ -108,69 +102,24 @@ button {
 	box-shadow: 3px 4px 8px #d8d8d8;
 }
 
-#privacy-link {
-	color: var(--dark-blue);
-	display: flex;
-	font-size: 12pt;
-	justify-content: flex-end;
+input[type='submit'] {
+	box-shadow: 3px 4px 8px #d8d8d8;
 }
 
-.attribution {
-	font-size: 11px;
-	text-align: center;
+.privacy-link {
+	align-self: flex-end;
 }
 
-.attribution a {
-	color: hsl(228, 45%, 44%);
-}
-
-@media screen and (max-width: 700pt) {
+@media screen and (min-width: 700px) {
 	.container {
-		flex-direction: column;
-		height: auto;
+		flex-direction: row;
 	}
 
-	#hero {
-		background: url('./images/bg-intro.svg');
-		background-size: cover;
-		background-repeat: no-repeat;
+	.hero {
+		background-image: linear-gradient(45deg, rgb(93, 98, 168), rgb(3, 28, 113));
 	}
 
-	#desktop-header {
-		display: none;
-	}
-
-	#mobile-header {
-		display: flex;
-	}
-
-	ion-icon {
-		color: white;
-		font-size: 24px;
-	}
-
-	#logo {
-		filter: invert(1) hue-rotate(180deg) brightness(3);
-	}
-
-	#main-page {
-		margin: 0 3em;
-	}
-
-	#signup {
-		flex-direction: column;
-	}
-
-	#signup-email {
-		border: 1px solid lightgray;
-		box-shadow: none;
-		width: 100%;
-		height: 36px;
-		font-size: 32px;
-		margin: 1em 0;
-	}
-
-	#signup-button {
-		height: 40px;
+	.menu {
+		align-self: flex-end;
 	}
 }
